1.70.0 "Round Robin"
==========================
    ADDED: new splashscreen + button to disable it in the look&feel section
    ADDED: winning icons, SVGs and fixed code to use them
    ADDED: DUMMY splash screen (krusader/splash.jpg) which will be replaced
           later
    FIXED: 'match whole word only' flag doesn't work in search
    FIXED: [ 1352107 ] File search "as you type"
    FIXED: [ 1351641 ] Krusader 1.70.0-beta2 on Sparc/Solaris: checksumdlg.h
    FIXED: terminal emulator saves its size from now
    FIXED: hiding the full size terminal emulator cannot restore the panels
    FIXED: terminal emulator has no focus after toggling it on
    FIXED: preserve dates doesn't copy the dates of folders

  UPDATED: Hungarian translation (thanks Arpad Biro)


1.70.0-beta2 "Afterburner"
==========================
    ADDED: you can now cancel creating and verifying checksums
    ADDED: a (missing) shortcut to bookmark current item (ctrl-shift-d)
    ADDED: Lithuanian translation (thanks Dovydas Sankauskas)
    ADDED: you can turn off sending CDs to the terminal emulator (general tab)
    ADDED: unpacking from RPM packages (much faster than using krarc)

  CHANGED: our write-enabled tar KIO-slave is only build when --with-kiotar is
           passed to ./configure. In this case the KDE-version will may be
           overwritten!

    FIXED: [ 1345220 ] bookmarks: separators shown as folders
    FIXED: new viewer tabs were sometimes added to windows different from the
           previously used ones
    FIXED: [ 1323613 ] SECURITY!!! PopularUrls stores cleartext passwords in
           krusaderrc
    FIXED: [ 1329044 ] krarc, missed similar file names belonging to different
           rpm-s
    FIXED: krarc doesn't notice the change of the rpm file to create new
           contents.cpio
    FIXED: iso protocol cannot step into files larger than 2 GByte
    FIXED: KDE 3.4, starting from profile misses the active tab which causes
           inconsistent state