@@ -4,6 +4,11 @@
     ADDED: winning icons, SVGs and fixed code to use them
     ADDED: DUMMY splash screen (krusader/splash.jpg) which will be replaced
            later
+
+  CHANGED: UserActions: addPlaceholderButton now only adds a space after
+           an executable. Not after normal placeholders.
+
+    FIXED: UserActions: addPlaceholderButton's popup-position
     FIXED: 'match whole word only' flag doesn't work in search
     FIXED: [ 1352107 ] File search "as you type"
     FIXED: [ 1351641 ] Krusader 1.70.0-beta2 on Sparc/Solaris: checksumdlg.h
